--- a/vercel.json
+++ b/vercel.json
@@ -29,13 +29,14 @@
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
-        {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
+
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' https://onetapp-fresh.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-dashboard.vercel.app"
         }
       ]
     }
