--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,14 @@
       }
     }
   ],
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "onetapp-client1-card.vercel.app" }],
+      "destination": "https://onetappcards.com/:1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
