--- a/vercel.json
+++ b/vercel.json
@@ -44,7 +44,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://onetapp-fresh.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-dashboard.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-fresh.vercel.app"
+          "value": "frame-ancestors 'self' https://onetapp-fresh.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-dashboard.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-fresh.vercel.app https://www.one-tapp.com https://one-tapp.com"
         }
       ]
     }
