--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,14 @@
       }
     }
   ],
-  "redirects": [],
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "onetapp-client1-card.vercel.app" }],
+      "destination": "https://www.onetappcards.com/$1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
@@ -38,7 +45,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://onetapp-fresh.vercel.app https://onetapp-dashboard.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-client1-card.vercel.app https://www.one-tapp.com https://one-tapp.com"
+          "value": "frame-ancestors 'self' https://onetapp-fresh.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-dashboard.vercel.app https://onetapp-webpage-3wnn.vercel.app https://onetapp-fresh.vercel.app https://www.one-tapp.com https://one-tapp.com"
         }
       ]
     }
