--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     {
       "source": "/(.*)",
       "has": [{ "type": "host", "value": "onetapp-client1-card.vercel.app" }],
-      "destination": "https://www.onetappcards.com/$1",
+      "destination": "https://onetapp-client1-card.vercel.app/$1",
       "permanent": true
     }
   ],
